[package]
name = "primesieve"
version = "0.1.0"
authors = ["Sam Cappleman-Lynes <sam.capplemanlynes@gmail.com>"]
repository = "https://github.com/killercup/hsl-rs.git"
homepage = "https://github.com/killercup/hsl-rs.git"
license = "MIT"
description = "Sieve for prime numbers using a segmented sieve."

[dependencies]
